--- a/Rscript_cytokines_TGFb.Rmd
+++ b/Rscript_cytokines_TGFb.Rmd
@@ -60,14 +60,14 @@ metadata <- metadata %>% filter(Treatment %in% c("CTR", "TGF"))
 # Filter metadata to include only rows with Experiment identifier SN21-25
 #metadata <- metadata %>% filter(Experiment %in% c("B", "C", "D", "E", "F"))
 # Save the filtered metadata
-write.csv(metadata, "Metadata_filtered_IL4IL13-noSN20.csv")
+##write.csv(metadata, "Metadata_filtered_IL4IL13-noSN20.csv")
 
 # Extract the row names (these will be the column names in rawcounts)
 selected_columns <- rownames(metadata)
 # Select the corresponding columns from rawcounts
 counts <- counts %>% select(all_of(selected_columns))
 # Save the filtered rawcounts data if needed
-write.csv(counts, "Rawcounts_filtered_IL4IL13-noSN20.csv")
+##write.csv(counts, "Rawcounts_filtered_IL4IL13-noSN20.csv")
 
 # check if order of samples is the same in metadata and count table
 rownames(metadata)
@@ -106,7 +106,7 @@ Count normalization #waarom normaliseer je 2x? DESEQ2 doet dit al? - kan je niet
 ```{r}
 normalized_counts <- counts(ddsoverall, normalized = TRUE)
 log2_normalized_counts <- log2(normalized_counts + 1)  # Adding 1 to avoid log(0)
-write.xlsx(as.data.frame(log2_normalized_counts), "log2normalized_counts_IL4IL13-noSN20.xlsx", rowNames = TRUE)
+##write.xlsx(as.data.frame(log2_normalized_counts), "log2normalized_counts_IL4IL13-noSN20.xlsx", rowNames = TRUE)
 ```
 
 Log transformation 
@@ -203,11 +203,11 @@ ggplot(new_PCA, aes(PC1, PC2, color=cell_type, shape=condition)) +
 
 Extract results 
 ```{r}
-sub_results <- results(ddsoverall, contrast = c("Treatment","CTR", "IL4IL13"),
+sub_results <- results(ddsoverall, contrast = c("Treatment","CTR", "TGF"),
                        alpha = 0.5)
 #head(sub_results)
 sub_results_LFC <- results(ddsoverall,
-                       name = "Treatment_IL4IL13_vs_CTR",
+                       name = "Treatment_TGF_vs_CTR",
                        alpha = 0.5)
 ```
 
@@ -238,13 +238,13 @@ sub_res_sig <- subset(sub_res_df, padj < 0.05) %>%
   arrange(padj)
 
 #Save results table
-write.csv(sub_res_sig, file = "./Results IL4_IL13-noSN20/LogFoldChanges_full_IL4IL13-noSN20.csv", row.names = TRUE)
+##write.csv(sub_res_sig, file = "./Results IL4_IL13-noSN20/LogFoldChanges_full_IL4IL13-noSN20.csv", row.names = TRUE)
 ```
 
 Extract the normalized counts
 ```{r}
 normalized_counts <- counts(ddsoverall, normalized = TRUE) #extracted counts normalized by estimateSIzeFactors()
-write.csv(normalized_counts, file.path("./Results IL4_IL13-noSN20/Normalized Counts IL4IL13-noSN20.csv"))
+##write.csv(normalized_counts, file.path("./Results IL4_IL13-noSN20/Normalized Counts IL4IL13-noSN20.csv"))
 ```
 
 plot volcanoplot using enhanced volcano
@@ -253,7 +253,7 @@ EnhancedVolcano(sub_res_sig,
                 lab = rownames(sub_res_sig),
                 x = 'log2FoldChange',
                 y = 'padj',
-                xlim = c(-10, 12), #edit
+                xlim = c(-10, 13), #edit
                 ylim = c(0, 50), #edit
                 title = "Effect of IL4/IL13 on hPSC-derived sensory neurons",
                 pCutoff = 0.05,
