--- a/Rscript_cytokines_TGFb.Rmd
+++ b/Rscript_cytokines_TGFb.Rmd
@@ -50,7 +50,7 @@ Background info and help with DESeq2
 Load metadata and counts files
 ```{r}
 # load the metadata and rowcount.csv file
-setwd("G:/My Drive/RNAseq/Carli_SN+Cytokines/Analysis Carli")
+setwd("G:/Mijn Drive/RNAseq/Carli_SN+Cytokines/Analysis Carli")
 
 metadata <- read.csv("Metadata.csv", row.names=1)
 counts <- read.csv("Rawcounts.csv", row.names=1)
@@ -58,7 +58,7 @@ counts <- read.csv("Rawcounts.csv", row.names=1)
 # Filter metadata to include only rows with treatment identifier "IL4IL13 or TGF"
 metadata <- metadata %>% filter(Treatment %in% c("CTR", "TGF"))
 # Filter metadata to include only rows with Experiment identifier SN21-25
-#metadata <- metadata %>% filter(Experiment %in% c("B", "C", "D", "E", "F"))
+metadata <- metadata %>% filter(Experiment %in% c("B", "C", "D", "E", "F"))
 # Save the filtered metadata
 ##write.csv(metadata, "Metadata_filtered_IL4IL13-noSN20.csv")
 
@@ -168,11 +168,11 @@ ggplot(pca_data_vsd, aes(x = PC2, y = PC3, color = Treatment, label = name)) +
   labs(x = "PC2", y = "PC3", title = "PCA: PC2 vs PC3")
 
 # Plot PC1 vs PC3 using ggplot2 - adapt to plot PC-values of choice
-ggplot(pca_data_vsd, aes(x = PC1, y = PC3, color = Treatment, label = name)) +
+ggplot(pca_data_vsd, aes(x = PC1, y = PC4, color = Treatment, label = name)) +
   geom_point(size = 3) +
   geom_text_repel(size = 3, max.overlaps = 10) + 
   theme_minimal() +
-  labs(x = "PC1", y = "PC3", title = "PCA: PC1 vs PC3")
+  labs(x = "PC1", y = "PC4", title = "PCA: PC1 vs PC4")
 ```
 
 PCA (different options) directly on the vst values instead 
@@ -238,9 +238,9 @@ sub_res_sig <- subset(sub_res_df, padj < 0.05) %>%
   arrange(padj)
 
 #Save results table
-write.csv(sub_res_sig, file = "./Results TGFb/LogFoldChanges-sig_TGFb.csv", row.names = TRUE)
+write.csv(sub_res_sig, file = "./Results TGFb-noSN20/LogFoldChanges-sig_TGFb-no20.csv", row.names = TRUE)
 #Save results table
-write.csv(sub_res_df, file = "./Results TGFb/LogFoldChanges_full_TGFb.csv", row.names = TRUE)
+write.csv(sub_res_df, file = "./Results TGFb-noSN20/LogFoldChanges_full_TGFb-no20.csv", row.names = TRUE)
 ```
 
 Extract the normalized counts
